fixed close-menu jump

--- a/assets/src/sass/styles.sass
+++ b/assets/src/sass/styles.sass
@@ -854,7 +854,7 @@ a.close-menu
 a.open-menu
     text-decoration: none
     display: block
-    position: absolute
+    position: fixed
     top: 0
     left: 0
     z-index: 10
